# flappy-bird

./: CMakeLists.txt  Makefile  README.md  main.cpp
src/: bird.cpp  bird.h  game.cpp  game.h  main.cpp  pipe.cpp  pipe.h
